classDiagram
    direction TB

    %% ── 配置层 ──
    class MilvusConfig {
        <<@Configuration>>
        +MilvusClientV2 milvusClient(String host, int port)
    }

    %% ── Schema 初始化层 ──
    class MilvusCollectionInitializer {
        <<@Component, ApplicationRunner>>
        +static final String FIELD_CHUNK_ID
        +static final String FIELD_DOC_ID
        +static final String FIELD_KB_ID
        +static final String FIELD_CONTENT
        +static final String FIELD_HEADING_PATH
        +static final String FIELD_DENSE_VECTOR
        +static final String FIELD_SPARSE_VECTOR
        +static final String FIELD_CHUNK_INDEX
        +static final String FIELD_TOKEN_COUNT
        +static final String FIELD_COLLECTION_TYPE
        +static final String FIELD_COURSE_ID
        +static final String FIELD_UPDATED_AT
        -MilvusClientV2 milvusClient
        -String collectionName
        -int embeddingDim
        -int hnswM
        -int hnswEfConstruction
        -boolean autoCreateCollection
        -int rrfK
        +void run(ApplicationArguments args)
        -void initCollection()
        -CreateCollectionReq buildCreateCollectionReq()
        -List~IndexParam~ buildIndexParams()
    }

    %% ── ETL 数据写入层 ──
    class EtlPipeline {
        <<@Component>>
        -static final String COLLECTION_NAME
        -DocumentMapper documentMapper
        -DocumentChunkMapper chunkMapper
        -MinioStorageService minioStorageService
        -EmbeddingModel embeddingModel
        -MilvusClientV2 milvusClient
        -EtlProperties etlProperties
        +void process(Long docId)
        +void parseDocument(Long docId)
        +void chunkDocument(Long docId)
        +void embedAndIndex(Long docId)
        +void reEmbedAndUpsert(Long chunkId)
        +void deleteFromMilvusByDocId(Long docId)
        +void deleteFromMilvusByKbId(Long kbId)
        +void deleteFromMilvusByChunkId(String chunkIdStr)
        -void insertToMilvus(DocumentChunk chunk, float[] vector)
        -JsonObject buildMilvusRow(DocumentChunk chunk, float[] vector)
    }

    %% ── 检索层 ──
    class SearchKnowledgeTool {
        <<@Component>>
        -static final int SEARCH_TOP_K
        -static final String COLLECTION_NAME
        -static final String DENSE_FIELD_NAME
        -static final String SPARSE_FIELD_NAME
        -static final List~String~ OUTPUT_FIELDS
        -FusionService fusionService
        -RerankService rerankService
        -EmbeddingModel embeddingModel
        -MilvusClientV2 milvusClient
        -ExecutorService searchExecutor
        +KnowledgeSearchResult searchKnowledge(List~TypedQuery~ queries)
        -Map searchInParallel(List~TypedQuery~ queries)
        -List~KnowledgeChunk~ searchSingle(TypedQuery query)
        -String buildFilterExpression(TypedQuery query)
    }

    %% ── DTO ──
    class TypedQuery {
        <<record>>
        +IntentType collectionType
        +String queryText
        +List~String~ courseIds
    }

    class KnowledgeSearchResult {
        <<record>>
        +List~KnowledgeChunk~ chunks
    }

    class KnowledgeChunk {
        <<record, nested in KnowledgeSearchResult>>
        +String chunkId
        +String docId
        +String kbId
        +String content
        +String headingPath
        +int chunkIndex
        +int tokenCount
        +double score
        +IntentType collectionType
        +String courseId
        +String source
    }

    class IntentType {
        <<enum>>
        TECHNICAL_QA
        COURSE_INFO
    }

    %% ── 外部依赖（v2 SDK 类）──
    class MilvusClientV2 {
        <<io.milvus.v2.client>>
        +createCollection(CreateCollectionReq)
        +loadCollection(LoadCollectionReq)
        +insert(InsertReq)
        +delete(DeleteReq)
        +search(SearchReq) SearchResp
        +hybridSearch(HybridSearchReq) SearchResp
        +hasCollection(HasCollectionReq) boolean
    }

    %% ── 关系 ──
    MilvusConfig --> MilvusClientV2 : 创建 Bean
    MilvusCollectionInitializer --> MilvusClientV2 : 注入
    EtlPipeline --> MilvusClientV2 : 注入
    SearchKnowledgeTool --> MilvusClientV2 : 注入

    MilvusCollectionInitializer ..> TypedQuery : 字段名常量共享
    SearchKnowledgeTool ..> MilvusCollectionInitializer : 引用 FIELD_* 常量
    EtlPipeline ..> MilvusCollectionInitializer : 引用 FIELD_* 常量

    SearchKnowledgeTool --> TypedQuery : 接收输入
    SearchKnowledgeTool --> KnowledgeSearchResult : 返回输出
    KnowledgeSearchResult *-- KnowledgeChunk : 包含
    TypedQuery --> IntentType : 引用
    KnowledgeChunk --> IntentType : 引用
